--- a/package.json
+++ b/package.json
@@ -6,19 +6,33 @@
     "dependencies": {
         "unirest": "~0.4.0"
     }, 
-    "description": "HomeStar / IOTDB Bridge for TCP Connected Lights", 
+    "peerDependencies": {
+        "iotdb": ">=0.4.16"
+    }, 
+    "description": "HomeStar / IOTDB Bridge for Template", 
+    "devDependencies": {
+        "grunt": "~0.4.5", 
+        "grunt-contrib-jshint": "~0.10.0", 
+        "grunt-contrib-nodeunit": "~0.2.0", 
+        "grunt-contrib-uglify": "~0.5.0", 
+        "grunt-contrib-watch": "~0.5.0", 
+        "grunt-jsbeautifier": "^0.2.7", 
+        "jshint-stylish": "~0.1.3", 
+        "load-grunt-tasks": "~0.2.0", 
+        "request": "^2.36.0"
+    }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
     "license": "Apache-2.0", 
     "main": "index.js", 
     "name": "homestar-tcp", 
-    "peerDependencies": {
-        "iotdb": ">=0.5.12"
-    }, 
     "private": false, 
     "repository": {
         "type": "git", 
         "url": "https://github.com/dpjanes/homestar-tcp"
+    }, 
+    "scripts": {
+        "test": "grunt"
     }, 
     "version": "0.0.2"
 }
