--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "main": "index.js", 
     "name": "homestar-tcp", 
     "peerDependencies": {
-        "iotdb": ">=0.6.3"
+        "iotdb": ">=0.6.3", 
+        "iotdb-arp": ">=0.0.3"
     }, 
     "private": false, 
     "repository": {
