--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "main": "index.js", 
     "name": "homestar-tcp", 
     "peerDependencies": {
-        "iotdb": ">=0.7.1", 
-        "iotdb-arp": ">=0.0.4"
+        "iotdb": "~0.7.6", 
+        "iotdb-arp": "~0.0.4"
     }, 
     "private": false, 
     "repository": {
@@ -35,5 +35,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.1"
+    "version": "0.1.2"
 }
