--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
         "url": "https://github.com/dpjanes/homestar-tcp/issues"
     }, 
     "dependencies": {
-        "iotdb": ">=0.12.0", 
-        "iotdb-format": "~0.0.2", 
-        "unirest": "~0.4.2"
+        "iotdb": ">=3.0.0", 
+        "iotdb-format": "~0.0.4", 
+        "unirest": "~0.5.1", 
+        "xml2js": "~0.4.17"
     }, 
-    "description": "HomeStar / IOTDB Bridge for TCP Connected Lighting", 
+    "description": "IOTDB Bridge for TCP Connected Lighting", 
     "devDependencies": {
-        "grunt": "~0.4.5", 
-        "grunt-contrib-jshint": "~0.12.0", 
-        "grunt-contrib-nodeunit": "~0.4.1", 
-        "grunt-contrib-uglify": "~0.11.1", 
-        "grunt-contrib-watch": "~0.6.1", 
-        "grunt-jsbeautifier": "~0.2.10", 
-        "jshint-stylish": "~2.1.0", 
-        "load-grunt-tasks": "~3.4.0", 
-        "request": "~2.69.0"
+        "grunt": "~1.0.1", 
+        "grunt-contrib-jshint": "~1.0.0", 
+        "grunt-contrib-nodeunit": "~1.0.0", 
+        "grunt-contrib-uglify": "~2.0.0", 
+        "grunt-contrib-watch": "~1.0.0", 
+        "grunt-jsbeautifier": "~0.2.13", 
+        "jshint-stylish": "~2.2.1", 
+        "load-grunt-tasks": "~3.5.2", 
+        "request": "~2.74.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
@@ -36,5 +37,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.17"
+    "version": "0.1.18"
 }
